<resources>
    <string name="app_name">HAPI</string>
    <string name="app_version" translatable="false">Version 2.4.2</string>
    <string name="broadcast_sync" translatable="false">HAPI_BROADCAST_SYNCUPDATE</string>
    <string name="meallist_photo_download" translatable="false">HAPI_BROADCAST_MEALLISTPHOTO</string>
    <string name="meallist_photo_download_update" translatable="false">HAPI_BROADCAST_MEALLISTPHOTO_UPDATE</string>
    <string name="meallist_getmeal_week" translatable="false">HAPI_BROADCAST_WEEK_SWIPE</string>
    <string name="meallist_get_new_week" translatable="false">HAPI_BROADCAST_NEW_WEEK</string>
    <string name="meallist_getavatar" translatable="false">HAPI_BROADCAST_AVATAR</string>
    <string name="meallist_addmeal" translatable="false">HAPI_BROADCAST_ADD_MEAL</string>
    <string name="meallist_addmeal_refresh" translatable="false">HAPI_BROADCAST_ADD_MEAL_REFRESH</string>
    <string name="meallist_deletehapimoment_refresh" translatable="false">HAPI_BROADCAST_DELETE_HAPIMOMENT_REFRESH</string>
    <string name="meallist_deletemeal_refresh" translatable="false">HAPI_BROADCAST_DELETE_MEAL_REFRESH</string>
    <string name="workoutListUpdate" translatable="false">HAPI_BROADCAST_WORKOUT</string>
    <string name="workoutListDelete" translatable="false">HAPI_BROADCAST_DELETE_WORKOUT</string>
    <string name="progress_refresh" translatable="false">PROGRESS_REFRESH</string>
    <string name="googlefit_request" translatable="false">GOOGLEFIT_REQUEST_AGAIN</string>
    <string name="googlefit_webview" translatable="false">GOOGLEFIT_WEBVIEW</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_save">Save</string>
    <string name="btn_savemeal">Save Meal</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_premium" translatable="false">Premium</string>
    <string name="btn_now" translatable="false">Now</string>
    <string name="btn_later">Later</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_done">Done</string>
    <string name="btn_gotit">I want to start now</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_tellme">Tell me more</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_editmeal">Edit Meal</string>
    <string name="message_hint">Add Message</string>
    <string name="about_about">About</string>
    <string name="about_me">Me</string>
    <string name="about_terms">Terms of Service</string>
    <string name="about_policy">Privacy Policy</string>
    <string name="about_contactus">Contact Us</string>
    <string name="default_coach_firstname" translatable="false"></string>
    <string name="default_coach_lastname" translatable="false"></string>
    <string name="ONETOONECOACHING_INTRO_HEADER">Your new diet journal is now easier to use</string>
    <string name="ONETOONECOACHING_INTRO_TEXT1">For each meal, use your mobile phone or tablet to take a picture of what is on your plate</string>
    <string name="ONETOONECOACHING_INTRO_TEXT2">Add a description (if you want!)</string>
    <string name="ONETOONECOACHING_INTRO_TEXT3">And you will receive comments from your dietitian</string>
    <string name="ONETOONECOACHING_INTRO_CARNETMINCEUR">Diet Journal</string>
    <string name="ONETOONECOACHING_INTRO_BUTTONAGREE">I agree</string>
    <string-array name="objective_array">
        <item name="OBJECTIVES_SELECTION_1">Lose Weight</item>
        <item name="OBJECTIVES_SELECTION_2">Eat Healthier</item>
        <item name="OBJECTIVES_SELECTION_3">Get More Fit</item>
    </string-array>
    <string-array name="source_array">
        <item name="SOURCE_SELECTION_1">Actinutrition</item>
        <item name="SOURCE_SELECTION_2">Clinique De Paris</item>
        <item name="SOURCE_SELECTION_3">Medias</item>
        <item name="SOURCE_SELECTION_4">Advertising</item>
        <item name="SOURCE_SELECTION_5">Word Of Mouth</item>
        <item name="SOURCE_SELECTION_6">Other</item>
    </string-array>
    <string-array name="profession_array">
        <item name="PROFESSION_SELECTION_1">Registered dietetian</item>
        <item name="PROFESSION_SELECTION_2">Fitness coach</item>
        <item name="PROFESSION_SELECTION_3">Life coach</item>
        <item name="PROFESSION_SELECTION_4">Medical Doctor</item>
        <item name="PROFESSION_SELECTION_5">Other</item>
    </string-array>
    <string name="EATINGHABITS_SELECTION_1">I eat balanced meals</string>
    <string name="EATINGHABITS_SELECTION_2">I skip meals often</string>
    <string name="EATINGHABITS_SELECTION_3">I often eat fastfood</string>
    <string name="EATINGHABITS_SELECTION_4">I often eat for pleasure</string>
    <string name="EATINGHABITS_SELECTION_5">I eat plenty of fruits &amp; veggies</string>
    <string name="EATINGHABITS_SELECTION_6">I am following a specific diet</string>
    <string name="SIGNUP_EMAIL">Email</string>
    <string name="SIGNUP_PASSWORD">Password</string>
    <string name="SIGNUP_CONFIRM_PASSWORD">Confirm Password</string>
    <string name="SIGNUP_EMAIL_PLACEHOLDER">Input email</string>
    <string name="SIGNUP_EMAIL_ERROR">Your email format is wrong. Please input a valid email.</string>
    <string name="SIGNUP_PASSWORD_PLACEHOLDER">Input password</string>
    <string name="SIGNUP_CONFIRM_PASSWORD_PLACEHOLDER">Re-input password</string>
    <string name="SIGNUP_EMAIL_EXIST">Email already exists</string>
    <string name="NAVIGATIONTITLE_OBJECTIVE">Your Objective</string>
    <string name="NAVIGATIONTITLE_EATINGHABITS">Describe Your Eating Habits</string>
    <string name="NAVIGATION_SIGNUP">Sign Up!</string>
    <string name="NAVIGATIONTITLE_COMPLETE_HAPIPROFILE">Complete Your HAPI Profile</string>
    <string name="NAVIGATIONTITLE_SELECTCOACH">Select Your Coach</string>
    <string name="OBJECTIVE_IWANTTO">I want to...</string>
    <string name="OBJECTIVE_CURRENTWEIGHT">Current Weight</string>
    <string name="OBJECTIVE_TARGETWEIGHT">Target Weight</string>
    <string name="OBJECTIVE_HEIGHT">Height</string>
    <string name="PROFILE_FIRSTNAME">First Name</string>
    <string name="PROFILE_LASTNAME">Last Name</string>
    <string name="PROFILE_GENDER">Gender</string>
    <string-array name="gender_array">
        <item name="PROFILE_GENDER_MALE_ARR">Male</item>
        <item name="PROFILE_GENDER_FEMALE_ARR">Female</item>
    </string-array>
    <string-array name="number_array">
        <item name="number44">44 kg</item>
        <item name="number45">45 kg</item>
        <item name="number46">46 kg</item>
        <item name="number47">47 kg</item>
        <item name="number48">48 kg</item>
        <item name="number49">49 kg</item>
        <item name="number50">50 kg</item>
        <item name="number51">51 kg</item>
        <item name="number52">52 kg</item>
        <item name="number53">53 kg</item>
        <item name="number54">54 kg</item>
        <item name="number55">55 kg</item>
        <item name="number56">56 kg</item>
        <item name="number57">57 kg</item>
        <item name="number58">58 kg</item>
        <item name="number59">59 kg</item>
        <item name="number60">60 kg</item>
        <item name="number61">61 kg</item>
        <item name="number62">62 kg</item>
        <item name="number63">63 kg</item>
        <item name="number64">64 kg</item>
        <item name="number65">65 kg</item>
        <item name="number66">66 kg</item>
        <item name="number67">67 kg</item>
        <item name="number68">68 kg</item>
        <item name="number69">69 kg</item>
        <item name="number70">70 kg</item>
        <item name="number71">71 kg</item>
        <item name="number72">72 kg</item>
        <item name="number73">73 kg</item>
        <item name="number74">74 kg</item>
        <item name="number75">75 kg</item>
        <item name="number76">76 kg</item>
        <item name="number77">77 kg</item>
        <item name="number78">78 kg</item>
        <item name="number79">79 kg</item>
        <item name="number80">80 kg</item>
        <item name="number81">81 kg</item>

    </string-array>
    <string name="CALENDAR_SU">SU</string>
    <string name="CALENDAR_MO">MO</string>
    <string name="CALENDAR_TU">TU</string>
    <string name="CALENDAR_WE">WE</string>
    <string name="CALENDAR_TH">TH</string>
    <string name="CALENDAR_FR">FR</string>
    <string name="CALENDAR_SA">SA</string>
    <string name="STEPS_BUTTON">Steps</string>
    <string name="FREE_TRIAL_BIG">$0 - Free trial</string>
    <string name="FREE_TRIAL_SMALL">(Limited time only)</string>
    <string name="FOR_ONE_MONTH_BIG">$12.49 per week"</string>
    <string name="FOR_ONE_MONTH_SMALL">($49.99 for 1 month)</string>
    <string name="FOR_THREE_MONTHS_BIG">$7.69 per week</string>
    <string name="FOR_THREE_MONTHS_SMALL">($99.99 for 3 months)</string>
    <string name="PAYMENT_OPTIONS_CONTENT">HAPI provides professional 1:1\nnutrition coaching by certified dietitians\nat a fraction of the price of a clinic\nconsultation.</string>
    <string name="PAYMENT_OPTIONS_CONTENT_GUARANTEE">100% Money-Back Guarantee</string>
    <string name="WELCOME_BRAVO">Bravo, you now have full access\nto HAPI features!</string>
    <string name="WELCOME_WHAT_HAPPENS_NEXT">What happens next?</string>
    <string name="WELCOME_POST_PREMIUM_DESCRIPTION_QUESTIONNAIRE">To help you better, I would like to\nkindly ask you to answer a few extra\nquestions about your eating habits and\ncoaching preferences. Ready?</string>
    <string name="WELCOME_LETS_MOVE_ON">Let\'s move on!</string>
    <string name="WELCOME_TITLE">Welcome</string>
    <string name="TAB_WEIGHT">Weight</string>
    <string name="TAB_STEPS">Steps</string>
    <string name="TAB_MEALS">Meals</string>
    <string name="GOOGLE_FIT_FIRST_LAUNCH">You can use your \"Google Fit\"  account to display your steps data to HAPI.\n\nDo you want to sync your Google account?</string>
</resources>