<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/paymentoptions_rl"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/hapicoach_bg">

    <TextView
        android:id="@+id/welcome_top_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/WELCOME_TITLE"
        android:textColor="@color/text_white"
        android:textSize="16.5sp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_below="@id/welcome_top_tv"
        android:id="@+id/welcome_coach_iv"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/coach_delphine_michel_default" />

    <TextView
        android:id="@+id/welcome_bravo_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_coach_iv"
        android:gravity="center"
        android:text="@string/WELCOME_BRAVO"
        android:textColor="@color/text_white"
        android:textSize="16.5sp"/>

    <TextView
        android:id="@+id/welcome_whatsnetxt_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_bravo_tv"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/WELCOME_WHAT_HAPPENS_NEXT"
        android:textColor="@color/text_white"
        android:textSize="16.5sp"
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/welcome_tohelpbetter_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_whatsnetxt_tv"
        android:gravity="center"
        android:text="@string/WELCOME_POST_PREMIUM_DESCRIPTION_QUESTIONNAIRE"
        android:textColor="@color/text_white"
        android:textSize="16.5sp" />

    <LinearLayout
        android:id="@+id/welcome_submit_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/welcome_submitBtn"
            style="@style/btnStyleWhiteTour"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:clickable="true"
            android:onClick="proceedToNextStep"
            android:text="@string/WELCOME_LETS_MOVE_ON" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/welcome_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>