<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/STEPS_BUTTON"
        android:textColor="@android:color/darker_gray"
        android:textSize="20dp"
        android:paddingBottom="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/exercise_display_steps" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GOOGLE_FIT_FIRST_LAUNCH"
            android:textColor="@android:color/darker_gray"
            android:textSize="14dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <View
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/steps_later_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/btn_later"
            android:background="@color/tw__transparent"
            android:textColor="@color/common_button_blue"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/steps_yes_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/btn_yes"
            android:textAllCaps="true"
            android:background="@color/tw__transparent"
            android:textColor="@color/common_button_blue"/>

        </LinearLayout>

</LinearLayout>