<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center">

    <Button
        android:id="@+id/bg_button"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:background="@drawable/rounded_button_orange_borderless_progress"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:weightSum="3"
        android:layout_gravity="center"
        android:layout_alignTop="@+id/bg_button">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/TAB_WEIGHT"
            style="@style/whiteNormal"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/TAB_STEPS"
            style="@style/whiteNormal"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/TAB_MEALS"
            style="@style/whiteNormal"
            android:gravity="center"/>
        </LinearLayout>
</RelativeLayout>